--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 
   <div style="margin-top: 50px;">Made By GabriellaG</div>
 
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
