fix script source

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <div id="grid" class="grid" style=""></div>
   </div>
+  <!-- aaaaaa -->
 
   <div style="margin-top: 50px;">Made By GabriellaG</div>
 
